Fix language detect file

--- a/DNS/tms/tms-portlet/src/main/resources/content/Language_en.properties
+++ b/DNS/tms/tms-portlet/src/main/resources/content/Language_en.properties
@@ -4,6 +4,7 @@ label.email=Email
 label.telephone=Telephone
 label.addcontact=Add Contact
 
+label.modelName=Model Name
 label.serialNumber=Serial Number
 label.macAddress=MAC Address
 
